方法替换